--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:thebayesianobserver@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/bayesianobserver">github.com/bayesianobserver</a></li>
+	        		<li><a href="https://github.com/indiaquiz">github.com/indiaquiz</a></li>
 				</ul>
 			</footer>
 		</body>
