--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/ml/notes">Notes</a></li>
-	        		<li><a href="/open/op">Open problems</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+		        	<li><a href="/about/me">About</a></li>
+	        	
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,7 +20,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:thebayesianobserver@gmail.com">email</a></li>
+	        		<li><a href="mailto:indiaquiz@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/indiaquiz">github.com/indiaquiz</a></li>
 				</ul>
 			</footer>
